# vibecode-fridays-08-29

./: README.md  SPEC.md
double_dactyl_generator/: README.md  crewai_flow.html  example.py  poem.txt  pyproject.toml  report.md  requirements.md
double_dactyl_generator/knowledge/: reference_poems.txt  user_preference.txt
double_dactyl_generator/src/double_dactyl_generator/: __init__.py  crew.py  main.py
double_dactyl_generator/src/double_dactyl_generator/config/: agents.yaml  tasks.yaml
double_dactyl_generator/src/double_dactyl_generator/crews/poem_generation_crew/: poem_generation_crew.py
double_dactyl_generator/src/double_dactyl_generator/crews/poem_generation_crew/config/: agents.yaml  tasks.yaml
double_dactyl_generator/src/double_dactyl_generator/crews/poem_validation_crew/: poem_validation_crew.py
double_dactyl_generator/src/double_dactyl_generator/crews/poem_validation_crew/config/: agents.yaml  tasks.yaml
double_dactyl_generator/src/double_dactyl_generator/tools/: reference_reader_tool.py
