[project]
name = "double_dactyl_generator"
version = "0.1.0"
description = "double-dactyl-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.175.0,<1.0.0"
]

[project.scripts]
kickoff = "double_dactyl_generator.main:kickoff"
run_crew = "double_dactyl_generator.main:kickoff"
plot = "double_dactyl_generator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
